fixed content clipping over nav, maybe fixed the header divs?

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,6 +33,7 @@ body {
     text-align: center;
     width: 100%;
     height: $navHeight;
+    z-index: 1000; 
     
     padding: 1%;
 
